--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,18 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #333;
 }
+
+/* Line clamp utilities */
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
